add : 광고 상세페이지 추가

--- a/api/templates/ad_detail.html
+++ b/api/templates/ad_detail.html
@@ -56,23 +56,31 @@
                   </div>
                   <div class="card-header clearfix" align="center">
                     <h5>지역</h5>
-                    <p class="no-margin fs-16">부산광역</p>
+                    <p class="no-margin fs-14">부산광역시</p>
                   </div>
                   <div class="card-header clearfix" align="center">
-                    <h5>캠페인 등록</h5>
-                    <p class="no-margin fs-16">4건</p>
+                    <h5>예산</h5>
+                    <p class="no-margin fs-14">100,000 원</p>
                   </div>
                   <div class="card-header clearfix" align="center">
-                    <h5>캠페인 계약</h5>
-                    <p class="no-margin fs-16">0건</p>
+                    <h5>마감 시간</h5>
+                    <p class="no-margin fs-14">2017-12-12</p>
                   </div>
                   <div class="card-header clearfix" align="center">
-                    <h5>누적 완료 금액</h5>
-                    <p class="no-margin fs-16">0원</p>
+                    <h5>모집률</h5>
+                    <p class="no-margin fs-16">
+                      <div style="display:flex; width:50%;">
+                        <div class="progress m-t-10" style="flex:3;">
+                          <div class="progress-bar progress-bar-primary" style="width:35%;"></div>
+                        </div>
+                        <div class="m-t-4 m-l-3" style="flex:1; font-size:0.9em;">
+                          35%
+                        </div>
+                      </div>
+                    </p>
                   </div>
-                  <div class="card-description">
-                    <p>What you think, you become. What you feel, you attract. What you imagine, you create - Buddha. <a href="#">#quote</a></p>
-                    <div class="via">via Twitter</div>
+                  <div class="card-description" align="center">
+                    <button class="btn btn-success btn-cons">지원하기</button>
                   </div>
                 </div>
                 <!-- END ITEM -->
@@ -82,10 +90,8 @@
                   <div class="circle" data-toggle="tooltip" title="Label" data-container="body">
                   </div>
                   <div class="card-header clearfix">
-                    <div style="float:left;">
-                      <div class="user-pic">
-                        <img alt="Profile Image" width="100px" height="100px" data-src-retina="{% static 'assets/img/profiles/8x.jpg' %}" data-src="{% static 'assets/img/profiles/8.jpg' %}" src="{% static 'assets/img/profiles/8x.jpg' %}">
-                      </div>
+                    <div style="float:left;" class="m-t-10 fs-16">
+                      훌리오(JULIO) 2차 광고 모집
                     </div>
                     <div style="float:right;">
                       <h3 class="no-margin p-b-5">{{ view.title }}</h3>
@@ -94,6 +100,24 @@
                     </div>
                   </div>
                   <div class="card-description">
+                    <img width="100%" height="180px" src="{% static 'assets/img/julio.jpg' %}">
+                    <p class="m-t-40 fs-16">1. 투자 포인트</p>
+                    <p class="m-l-10 m-t-10 fs-14">
+                      POINT1. 2015년 10월이후 2년간 당사 대출 정상거래 중인 우수 사업장
+- 본 차주사는 채권번호 269호 '훌리오' 2억원을 완제한 이력이 있으며, 1344호 1.7억원, 2602호 1.7억원, 4352호 1억원을 연체없이 정상거래중으로 2017년 11월 13일 현재 당사 대출잔액은 약2.8억원입니다.
+훌리오는 2015년부터 당사대출 이용을 통해 신규 매장을 오픈하고 물류시스템을 구축하는 등 8퍼센트와 함께 성장하고 있는 우수 사업장입니다.
+                    </p>
+
+                    <p class="m-l-10 m-t-10 fs-14">
+POINT2. 훌리오 및 관계사 직영점 5곳의 안정적인 매출
+- 훌리오 및 관계사 직영점 5곳의 2016년 매출 총액은 약40억원이며 17년 매출총액은 50억원 이상이 예상되고 있습니다. 훌리오 및 관계사의 매출은 큰 변동없이 안정적으로 성장하고 있으며, 매장과 아이템이 분산되어 있어 단일 매장에 비해 매출의 안정성이 높습니다.
+                    </p>
+                  </div>
+
+                  <div class="card-description">
+                    <p class="m-t-40 fs-16">2. 사업자 소개</p>
+                    <p class="m-l-10 m-t-10 fs-14">
+- 훌리오는 2009년 7월, 국내에 멕시칸요리가 생소하던 시절 강남역 뒷골목 25평 남짓의 작은 매장에서 시작하였습니다. 이후 홍대점, 종로점, 신사점, 수원점을 차례로 오픈하였으며, 가로수길에 위치한 미국남부요리 전문점 'PIER17', 텍사스 바비큐 전문점 '오스틴' 강남점, 홍대점등 새로운 도전도 멈추지 않고 있습니다. 멕시칸 요리 문화를 선도하는 기업이 되기 위하여 끊임없는 자기개발과 투자를 통해 대한민국에서 가장 사랑 받는 멕시칸 요리 전문점이 되도록 노력하겠습니다.                    </p>
                   </div>
                 </div>
                 <!-- END ITEM -->
