--- a/api/templates/resume_list.html
+++ b/api/templates/resume_list.html
@@ -28,7 +28,7 @@
     <div class="m-l-10 m-t-10 m-r-10 row">
 
       <!-- START CREATOR LIST -->
-      <div class="col-lg-4 sm-no-padding">
+    <div class="col-lg-4 sm-no-padding">
         <div class="card card-transparent">
           <div class="card-block no-padding">
             <div id="card-advance" class="card card-default">
@@ -56,7 +56,7 @@
                 </div>
               </div>
               <div class="card-block">
-                <h3> <span class="semi-bold">40만 팔로워 페북스타</span> </h3>
+                <h3> <span class="semi-bold"><a href="{% url 'resume_detail'%}">40만 팔로워 페북스타</a></span> </h3>
                 <p>안녕하세요. 후기광고 열심히 할 수 있습니다! 연락주세요~</p>
                 <br>
                 <div>
