--- a/api/templates/resume_list.html
+++ b/api/templates/resume_list.html
@@ -56,7 +56,7 @@
                 </div>
               </div>
               <div class="card-block">
-                <h3> <span class="semi-bold"><a href="{% url 'resume_detail'%}">40만 팔로워 페북스타</a></span> </h3>
+                <h3> <span class="semi-bold"><a href="{% url 'resume_detail' 1 %}">40만 팔로워 페북스타</a></span> </h3>
                 <p>안녕하세요. 후기광고 열심히 할 수 있습니다! 연락주세요~</p>
                 <br>
                 <div>
