크리에이터 카테고리 필터 추가
Signed-off-by: KangSeyun <dcp.k953@gmail.com>

--- a/api/templates/ad_list.html
+++ b/api/templates/ad_list.html
@@ -22,6 +22,8 @@
         </div>
       </div>
     </div>
+    <div data-pages="parallax">
+    </div>        
     <!-- END JUMBOTRON -->
     {% for i in ad %}
       <div class="row" onclick="location.href='/api/v1/ad/{{i.id}}/';">
