--- a/api/templates/resume_list.html
+++ b/api/templates/resume_list.html
@@ -22,13 +22,32 @@
         </div>
       </div>
     </div>
+    <div data-pages="parallax">
+        <div class="container-fluid p-l-25 p-r-25 sm-p-l-0 sm-p-r-0">
+          <div class="inner">
+            <!-- START BREADCRUMB -->
+            <ol class="breadcrumb sm-p-b-5">
+              <li>
+                <select class="form-control category" name="category">
+                  <option value="0">카테고리</option>
+                  {% for i in category %}
+                    <option value="{{i.id}}">{{i}}</option>
+                  {% endfor %}
+                </select>
+              </li>
+            </ol>
+            
+          </div>
+        </div>
+      </div>
     <!-- END JUMBOTRON -->
 
 
     <div class="m-l-10 m-t-10 m-r-10 row">
 
+      {% for i in obj %}
       <!-- START CREATOR LIST -->
-    <div class="col-lg-4 sm-no-padding">
+      <div class="col-lg-4 sm-no-padding">
         <div class="card card-transparent">
           <div class="card-block no-padding">
             <div id="card-advance" class="card card-default">
@@ -75,56 +94,7 @@
           </div>
         </div>
       </div>
-      <!-- END CREATOR -->
-
-      <!-- START CREATOR LIST -->
-      <div class="col-lg-4 sm-no-padding">
-        <div class="card card-transparent">
-          <div class="card-block no-padding">
-            <div id="card-advance" class="card card-default">
-              <div class="card-header  ">
-                <div class="card-title">Creator Title
-                </div>
-                <div class="card-controls">
-                  <ul>
-                    <li>
-                      <div class="dropdown">
-                        <a id="card-settings" data-target="#" href="#" data-toggle="dropdown" aria-haspopup="true" role="button" aria-expanded="false">
-                          <i class="card-icon card-icon-settings "></i>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="card-settings">
-                          <a href="#" class="dropdown-item">API</a>
-                          <a href="#" class="dropdown-item">Preferences</a>
-                          <a href="#" class="dropdown-item">About</a>
-                        </div>
-                      </div>
-                    </li>
-                    <li><a href="#" class="card-close" data-toggle="close"><i
-	    								class="card-icon card-icon-close"></i></a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-              <div class="card-block">
-                <h3> <span class="semi-bold">20만뷰 유투버</span> </h3>
-                <p>안녕하세요. 영상광고 열심히 할 수 있습니다! 연락주세요~</p>
-                <br>
-                <div>
-                  <div class="profile-img-wrapper m-t-5 inline">
-                    <img width="35" height="35" src="{% static 'assets/img/profiles/avatar_small2x.jpg' %}">
-                    <div class="chat-status available">
-                    </div>
-                  </div>
-                  <div class="inline m-l-10">
-                    <p class="small hint-text m-t-5">김경이
-                      <br>for 유투버</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      {% endfor %}
       <!-- END CREATOR -->
 
     </div>
