--- a/api/templates/ad_list.html
+++ b/api/templates/ad_list.html
@@ -21,9 +21,25 @@
           </ol>
         </div>
       </div>
-    </div>
+    </div>     
     <div data-pages="parallax">
-    </div>        
+        <div class="container-fluid p-l-25 p-r-25 sm-p-l-0 sm-p-r-0">
+          <div class="inner">
+            <!-- START BREADCRUMB -->
+            <ol class="breadcrumb sm-p-b-5">
+              <li>
+                <select class="form-control category-ad" name="category">
+                  <option value="0">카테고리</option>
+                  {% for i in category %}
+                    <option value="{{i.id}}">{{i}}</option>
+                  {% endfor %}
+                </select>
+              </li>
+            </ol>
+            
+          </div>
+        </div>
+    </div> 
     <!-- END JUMBOTRON -->
     {% for i in ad %}
       <div class="row" onclick="location.href='/api/v1/ad/{{i.id}}/';">
