--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -954,6 +954,7 @@
   <script src="{% static 'pages/js/pages.min.js' %}"></script>
   <!-- END CORE TEMPLATE JS -->
   <!-- BEGIN PAGE LEVEL JS -->
+  <script src="{% static 'assets/js/charts.js' %}" type="text/javascript"></script>
   <script src="{% static 'assets/js/scripts.js' %}" type="text/javascript"></script>
   <!-- END PAGE LEVEL JS -->
 
