각종 기능 추가
Signed-off-by: KangSeyun <dcp.k953@gmail.com>

--- a/api/templates/ad_detail.html
+++ b/api/templates/ad_detail.html
@@ -51,21 +51,21 @@
 			 		</h6>
                   </div>
                   <div class="card-header clearfix" align="center">
-                    <h5>업종</h5>
+                    <h5>카테고리</h5>
                     <p class="no-margin fs-16">{{ view.category.name }}</p>
                   </div>
                   <div class="card-header clearfix" align="center">
                     <h5>지역</h5>
-                    <p class="no-margin fs-14">부산광역시</p>
+                    <p class="no-margin fs-14">{{ view.location.title}}</p>
                   </div>
                   <div class="card-header clearfix" align="center">
                     <h5>예산</h5>
-                    <p class="no-margin fs-14">100,000 원</p>
+                    <p class="no-margin fs-14">{{ view.budget}}원</p>
                   </div>
-                  <div class="card-header clearfix" align="center">
+                  <!-- <div class="card-header clearfix" align="center">
                     <h5>마감 시간</h5>
                     <p class="no-margin fs-14">2017-12-12</p>
-                  </div>
+                  </div> -->
                   <div class="card-header clearfix" align="center">
                     <h5>모집률</h5>
                     <p class="no-margin fs-16">
