--- a/api/templates/join.html
+++ b/api/templates/join.html
@@ -56,6 +56,17 @@
               </div>
             </div>
           </div>
+          <div class="row">
+            <div class="col-md-12">
+              <div class="form-group form-group-default">
+                <label>타입</label>
+                <select class="form-control">
+                  <option>크리에이터</option>
+                  <option>광고주</option>
+                </select>
+              </div>
+            </div>
+          </div>
           <button class="btn btn-primary btn-cons m-t-10" type="submit">회원가입</button>
           <div class="row" style="float: right;">
            <div>
