--- a/api/templates/ad_list.html
+++ b/api/templates/ad_list.html
@@ -42,7 +42,7 @@
     </div> 
     <!-- END JUMBOTRON -->
     {% for i in ad %}
-      <div class="row" onclick="location.href='/api/v1/ad/{{i.id}}/';">
+      <div class="breadcrumb sm-p-b-5"  style="margin-left:10px;margin-right:10px;" onclick="location.href='/api/v1/ad/{{i.id}}/';">
         <div class="col-lg-12 sm-no-padding">
           <div class="card card-transparent">
             <div class="card-block no-padding">
@@ -85,7 +85,7 @@
                     <img width="100%" height="120px" src="{% static 'assets/img/julio.jpg' %}">
                   </div>
                   <div class=" col-lg-8">
-                    <h3> <span class="semi-bold">훌리오(JULIO) 2차</span> </h3>
+                    <h3> <span class="semi-bold">{{i.title}}</span> </h3>
                     <p>
                       <table class="m-t-20" width="90%" style="font-size:1.1em;">
                         <tr>
