--- a/api/templates/resume_insert.html
+++ b/api/templates/resume_insert.html
@@ -1,8 +1,33 @@
-{% extends './my_base.html' %}
+
+{% extends 'base.html' %}
+
 {% load static %}
 
-{% block my %} 
-<div class="feed">
+{% block content %}
+
+
+
+<!-- START PAGE CONTENT -->
+<div class="content ">
+  <div class="social-wrapper">
+    <!-- END JUMBOTRON -->
+    <div class="container-fluid container-fixed-lg sm-p-l-0 sm-p-r-0">
+
+      <!-- START JUMBOTRON -->
+      <div data-pages="parallax">
+        <div class="container-fluid p-l-25 p-r-25 sm-p-l-0 sm-p-r-0">
+          <div class="inner">
+            <!-- START BREADCRUMB -->
+            <ol class="breadcrumb sm-p-b-5">
+              <li class="breadcrumb-item"><a href="#">Home</a></li>
+              <li class="breadcrumb-item active">크리에이터</li>
+            </ol>
+          </div>
+        </div>
+      </div>
+      <!-- END JUMBOTRON -->
+
+      <div class="feed">
         <!-- START DAY -->
         <div class="day" data-social="day">
           <!-- START ITEM -->
@@ -35,19 +60,12 @@
                         <div class="card-header clearfix">
                             마지막 접속시간 : 2017-10-8 02:12
                         </div>
-                        <div class="card-header clearfix">
-                                {% if user.status == 3 %}
-                                    <a href="{% url 'resume_regi_delete' %}?user={{user.id}}" style="color:#333;"><button class="btn btn-primary">크리에이터 등록해제</button></a>
-                                {% else %}
-                                    <a href="{% url 'resume_regi' %}?user={{user.id}}" style="color:#333;"><button class="btn btn-primary">크리에이터 등록</button></a>
-                                {% endif %}
-                        </div>
                   </div>
                 </div>
                 <!-- END ITEM -->
 
                 <!-- START ITEM -->
-                <div class="card social-card share col2" style="width:600px;" data-social="item">
+                <div class="card social-card share col2" data-social="item">
                     <div class="col-lg-12 m-b-6 d-flex">
                         <!-- START WIDGET widget_pendingComments.tpl-->
                         <div class="widget-11-2 card no-border card-condensed no-margin widget-loader-circle align-self-stretch d-flex flex-column">
@@ -219,7 +237,7 @@
                             <input type="text" class="form-control">
                           </div>
                           <div class="col-md-12">
-                            <p style="margin-top:10px;">URL</p>                              
+                            <p style="margin-top:10px;">url</p>                              
                             <input type="text" class="form-control">                            
                           </div>
                           <div class="col-md-12">
@@ -250,4 +268,14 @@
         </div>
         <!-- END DAY -->
       </div>
+      <!-- END FEED -->
+    </div>
+    <!-- END CONTAINER FLUID -->
+    </div>
+    <!-- /container -->
+  </div>
+</div>
+<!-- END PAGE CONTENT -->
+
+
 {% endblock %}
