--- a/api/templates/my/my_base.html
+++ b/api/templates/my/my_base.html
@@ -38,6 +38,11 @@
                 </a>
               </li>
               <li>
+                  <a href="{% url 'my_ad_result' %}">
+                    <span class="title"><i class="fa fa-list"></i> 광고 결과</span>
+                    <span class="badge pull-right">1</span>
+                  </a>
+                </li>
             </ul>
             <p class="menu-title">마이 톤타타</p>
             <ul class="main-menu">
