--- a/api/templates/ad_list.html
+++ b/api/templates/ad_list.html
@@ -42,7 +42,7 @@
     </div> 
     <!-- END JUMBOTRON -->
     {% for i in ad %}
-      <div class="breadcrumb sm-p-b-5"  style="margin-left:10px;margin-right:10px;" onclick="location.href='/api/v1/ad/{{i.id}}/';">
+      <div class="breadcrumb sm-p-b-5"  style="margin-left:10px;margin-right:10px;margin-bottom: -30px;" onclick="location.href='/api/v1/ad/{{i.id}}/';">
         <div class="col-lg-12 sm-no-padding">
           <div class="card card-transparent">
             <div class="card-block no-padding">
