--- a/api/templates/ad_list.html
+++ b/api/templates/ad_list.html
@@ -41,6 +41,211 @@
         </div>
     </div> 
     <!-- END JUMBOTRON -->
+
+    <div class="row p-l-25 p-r-25">
+
+      <div class="col-lg-12 sm-no-padding">
+        <div class="card card-transparent">
+          <div class="card-block no-padding">
+            <div id="card-advance" class="card card-default">
+              <div class="card-header  ">
+                <div class="card-controls">
+                  <ul>
+                    <li>
+                      <div class="dropdown">
+                        <a id="card-settings" data-target="#" href="#" data-toggle="dropdown" aria-haspopup="true" role="button" aria-expanded="false">
+                          <i class="card-icon card-icon-settings "></i>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="card-settings">
+                          <a href="#" class="dropdown-item">API</a>
+                          <a href="#" class="dropdown-item">Preferences</a>
+                          <a href="#" class="dropdown-item">About</a>
+                        </div>
+                      </div>
+                    </li>
+                    <li><a href="#" class="card-collapse" data-toggle="collapse"><i
+ 	   								class="card-icon card-icon-collapse"></i></a>
+                    </li>
+                    <li><a href="#" class="card-refresh" data-toggle="refresh"><i
+ 	   								class="card-icon card-icon-refresh"></i></a>
+                    </li>
+                    <li><a href="#" class="card-maximize" data-toggle="maximize"><i
+ 	   								class="card-icon card-icon-maximize"></i></a>
+                    </li>
+                    <li><a href="#" class="card-close" data-toggle="close"><i
+ 	   								class="card-icon card-icon-close"></i></a>
+                    </li>
+                  </ul>
+                 </div>
+              </div>
+              <div class="row card-block">
+               <div class="col-lg-3">
+                 <img width="100%" height="120px" src="{% static 'assets/img/hyodong.jpg' %}">
+               </div>
+               <div class=" col-lg-8">
+                 <h3> <span class="semi-bold">효동아이엔씨</span> </h3>
+                 <p>
+                   <table class="m-t-20" width="90%" style="font-size:1.1em;">
+                     <tr>
+                       <td width="20%">모집인원</td><td width="20%">기간</td><td width="20%">지역</td><td width="20%">예산</td><td>모집률</td>
+                     </tr>
+                     <tr>
+                       <td>4명</td><td>12개월</td><td>서울, 경기</td><td>100,000원</td>
+                       <td>
+                         <div style="display:flex;">
+                           <div class="progress m-t-10" style="flex:3;">
+                             <div class="progress-bar progress-bar-primary" style="width:35%;"></div>
+                           </div>
+                           <div class="m-l-10 m-t-5" style="flex:1; font-size:0.8em;">
+                             35%
+                           </div>
+                         </div>
+                       </td>
+                     </tr>
+                   </table>
+                 </p>
+               </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-12 sm-no-padding">
+        <div class="card card-transparent">
+          <div class="card-block no-padding">
+            <div id="card-advance" class="card card-default">
+              <div class="card-header  ">
+                <div class="card-controls">
+                  <ul>
+                    <li>
+                      <div class="dropdown">
+                        <a id="card-settings" data-target="#" href="#" data-toggle="dropdown" aria-haspopup="true" role="button" aria-expanded="false">
+                          <i class="card-icon card-icon-settings "></i>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="card-settings">
+                          <a href="#" class="dropdown-item">API</a>
+                          <a href="#" class="dropdown-item">Preferences</a>
+                          <a href="#" class="dropdown-item">About</a>
+                        </div>
+                      </div>
+                    </li>
+                    <li><a href="#" class="card-collapse" data-toggle="collapse"><i
+ 	   								class="card-icon card-icon-collapse"></i></a>
+                    </li>
+                    <li><a href="#" class="card-refresh" data-toggle="refresh"><i
+ 	   								class="card-icon card-icon-refresh"></i></a>
+                    </li>
+                    <li><a href="#" class="card-maximize" data-toggle="maximize"><i
+ 	   								class="card-icon card-icon-maximize"></i></a>
+                    </li>
+                    <li><a href="#" class="card-close" data-toggle="close"><i
+ 	   								class="card-icon card-icon-close"></i></a>
+                    </li>
+                  </ul>
+                 </div>
+              </div>
+              <div class="row card-block">
+               <div class="col-lg-3">
+                 <img width="100%" height="120px" src="{% static 'assets/img/pu.jpg' %}">
+               </div>
+               <div class=" col-lg-8">
+                 <h3> <span class="semi-bold">뿌야뿌(Puujapuu)</span> </h3>
+                 <p>
+                   <table class="m-t-20" width="90%" style="font-size:1.1em;">
+                     <tr>
+                       <td width="20%">모집인원</td><td width="20%">기간</td><td width="20%">지역</td><td width="20%">예산</td><td>모집률</td>
+                     </tr>
+                     <tr>
+                       <td>2명</td><td>1개월</td><td>전북, 전남</td><td>50,000원</td>
+                       <td>
+                         <div style="display:flex;">
+                           <div class="progress m-t-10" style="flex:3;">
+                             <div class="progress-bar progress-bar-primary" style="width:10%;"></div>
+                           </div>
+                           <div class="m-l-10 m-t-5" style="flex:1; font-size:0.8em;">
+                             10%
+                           </div>
+                         </div>
+                       </td>
+                     </tr>
+                   </table>
+                 </p>
+               </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-12 sm-no-padding">
+        <div class="card card-transparent">
+          <div class="card-block no-padding">
+            <div id="card-advance" class="card card-default">
+              <div class="card-header  ">
+                <div class="card-controls">
+                  <ul>
+                    <li>
+                      <div class="dropdown">
+                        <a id="card-settings" data-target="#" href="#" data-toggle="dropdown" aria-haspopup="true" role="button" aria-expanded="false">
+                          <i class="card-icon card-icon-settings "></i>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="card-settings">
+                          <a href="#" class="dropdown-item">API</a>
+                          <a href="#" class="dropdown-item">Preferences</a>
+                          <a href="#" class="dropdown-item">About</a>
+                        </div>
+                      </div>
+                    </li>
+                    <li><a href="#" class="card-collapse" data-toggle="collapse"><i
+ 	   								class="card-icon card-icon-collapse"></i></a>
+                    </li>
+                    <li><a href="#" class="card-refresh" data-toggle="refresh"><i
+ 	   								class="card-icon card-icon-refresh"></i></a>
+                    </li>
+                    <li><a href="#" class="card-maximize" data-toggle="maximize"><i
+ 	   								class="card-icon card-icon-maximize"></i></a>
+                    </li>
+                    <li><a href="#" class="card-close" data-toggle="close"><i
+ 	   								class="card-icon card-icon-close"></i></a>
+                    </li>
+                  </ul>
+                 </div>
+              </div>
+              <div class="row card-block">
+               <div class="col-lg-3">
+                 <img width="100%" height="120px" src="{% static 'assets/img/julio.jpg' %}">
+               </div>
+               <div class=" col-lg-8">
+                 <h3> <span class="semi-bold">훌리오(JULIO) 2차</span> </h3>
+                 <p>
+                   <table class="m-t-20" width="90%" style="font-size:1.1em;">
+                     <tr>
+                       <td width="20%">모집인원</td><td width="20%">기간</td><td width="20%">지역</td><td width="20%">예산</td><td>모집률</td>
+                     </tr>
+                     <tr>
+                       <td>7명</td><td>2개월</td><td>서울, 경기</td><td>70,000원</td>
+                       <td>
+                         <div style="display:flex;">
+                           <div class="progress m-t-10" style="flex:3;">
+                             <div class="progress-bar progress-bar-primary" style="width:73%;"></div>
+                           </div>
+                           <div class="m-l-10 m-t-5" style="flex:1; font-size:0.8em;">
+                             73%
+                           </div>
+                         </div>
+                       </td>
+                     </tr>
+                   </table>
+                 </p>
+               </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     {% for i in ad %}
       <div class="row" onclick="location.href='/api/v1/ad/{{i.id}}/';">
         <div class="col-lg-12 sm-no-padding">
