--- a/api/templates/my/index.html
+++ b/api/templates/my/index.html
@@ -87,112 +87,40 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td class="font-montserrat all-caps fs-12 w-50">Purchase CODE #2345</td>
+                                  <td class="font-montserrat all-caps fs-12 w-50">휴무 중이었던 소방관, 심폐소생술로 소중한 생명 살려</td>
                                   <td class="text-right hidden-lg">
                                     <span class="hint-text small">dewdrops</span>
                                   </td>
                                   <td class="text-right b-r b-dashed b-grey w-25">
-                                    <span class="hint-text small">Qty 1</span>
+                                    <span class="hint-text small">YouTube</span>
                                   </td>
                                   <td class="w-25">
-                                    <span class="font-montserrat fs-18">$27</span>
+                                    <span class="font-montserrat fs-18">87,317</span>
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td class="font-montserrat all-caps fs-12 w-50">Purchase CODE #2345</td>
-                                  <td class="text-right hidden-lg">
-                                    <span class="hint-text small">dewdrops</span>
-                                  </td>
-                                  <td class="text-right b-r b-dashed b-grey w-25">
-                                    <span class="hint-text small">Qty 1</span>
-                                  </td>
-                                  <td class="w-25">
-                                    <span class="font-montserrat fs-18">$27</span>
-                                  </td>
+                                    <td class="font-montserrat all-caps fs-12 w-50">휴입짧은 햇님의 먹방~!MUKBANG, EATING SHOW무 중이었던 소방관, 심폐소생술로 소중한 생명 살려</td>
+                                    <td class="text-right hidden-lg">
+                                        <span class="hint-text small">dewdrops</span>
+                                    </td>
+                                    <td class="text-right b-r b-dashed b-grey w-25">
+                                        <span class="hint-text small">YouTube</span>
+                                    </td>
+                                    <td class="w-25">
+                                        <span class="font-montserrat fs-18">38,937</span>
+                                    </td>
                                 </tr>
                                 <tr>
-                                  <td class="font-montserrat all-caps fs-12 w-50">Purchase CODE #2345</td>
-                                  <td class="text-right hidden-lg">
-                                    <span class="hint-text small">dewdrops</span>
-                                  </td>
-                                  <td class="text-right b-r b-dashed b-grey w-25">
-                                    <span class="hint-text small">Qty 1</span>
-                                  </td>
-                                  <td class="w-25">
-                                    <span class="font-montserrat fs-18">$27</span>
-                                  </td>
-                                </tr>
-                                <tr>
-                                  <td class="font-montserrat all-caps fs-12 w-50">Purchase CODE #2345</td>
-                                  <td class="text-right hidden-lg">
-                                    <span class="hint-text small">dewdrops</span>
-                                  </td>
-                                  <td class="text-right b-r b-dashed b-grey w-25">
-                                    <span class="hint-text small">Qty 1</span>
-                                  </td>
-                                  <td class="w-25">
-                                    <span class="font-montserrat fs-18">$27</span>
-                                  </td>
-                                </tr>
-                                <tr>
-                                  <td class="font-montserrat all-caps fs-12 w-50">Purchase CODE #2345</td>
-                                  <td class="text-right hidden-lg">
-                                    <span class="hint-text small">dewdrops</span>
-                                  </td>
-                                  <td class="text-right b-r b-dashed b-grey w-25">
-                                    <span class="hint-text small">Qty 1</span>
-                                  </td>
-                                  <td class="w-25">
-                                    <span class="font-montserrat fs-18">$27</span>
-                                  </td>
-                                </tr>
-                                <tr>
-                                  <td class="font-montserrat all-caps fs-12 w-50">Purchase CODE #2345</td>
-                                  <td class="text-right hidden-lg">
-                                    <span class="hint-text small">dewdrops</span>
-                                  </td>
-                                  <td class="text-right b-r b-dashed b-grey w-25">
-                                    <span class="hint-text small">Qty 1</span>
-                                  </td>
-                                  <td class="w-25">
-                                    <span class="font-montserrat fs-18">$27</span>
-                                  </td>
-                                </tr>
-                                <tr>
-                                  <td class="font-montserrat all-caps fs-12 w-50">Purchase CODE #2345</td>
-                                  <td class="text-right hidden-lg">
-                                    <span class="hint-text small">dewdrops</span>
-                                  </td>
-                                  <td class="text-right b-r b-dashed b-grey w-25">
-                                    <span class="hint-text small">Qty 1</span>
-                                  </td>
-                                  <td class="w-25">
-                                    <span class="font-montserrat fs-18">$27</span>
-                                  </td>
-                                </tr>
-                                <tr>
-                                  <td class="font-montserrat all-caps fs-12 w-50">Purchase CODE #2345</td>
-                                  <td class="text-right hidden-lg">
-                                    <span class="hint-text small">dewdrops</span>
-                                  </td>
-                                  <td class="text-right b-r b-dashed b-grey w-25">
-                                    <span class="hint-text small">Qty 1</span>
-                                  </td>
-                                  <td class="w-25">
-                                    <span class="font-montserrat fs-18">$27</span>
-                                  </td>
-                                </tr>
-                                <tr>
-                                  <td class="font-montserrat all-caps fs-12 w-50">Purchase CODE #2345</td>
-                                  <td class="text-right hidden-lg">
-                                    <span class="hint-text small">dewdrops</span>
-                                  </td>
-                                  <td class="text-right b-r b-dashed b-grey w-25">
-                                    <span class="hint-text small">Qty 1</span>
-                                  </td>
-                                  <td class="w-25">
-                                    <span class="font-montserrat fs-18">$27</span>
-                                  </td>
+                                    <td class="font-montserrat all-caps fs-12 w-50">선바 처갓집 슈프림 양념치킨 먹방</td>
+                                    <td class="text-right hidden-lg">
+                                        <span class="hint-text small">dewdrops</span>
+                                    </td>
+                                    <td class="text-right b-r b-dashed b-grey w-25">
+                                        <span class="hint-text small">YouTube</span>
+                                    </td>
+                                    <td class="w-25">
+                                        <span class="font-montserrat fs-18">10,101</span>
+                                    </td>
                                 </tr>
                               </tbody>
                             </table>
