--- a/api/templates/resume_result.html
+++ b/api/templates/resume_result.html
@@ -43,7 +43,7 @@
                   
                   <div class="card-description" align="center">
                       <div class="user-pic">
-                          <img alt="Profile Image" width="33" height="250" data-src-retina="{% static 'assets/img/profiles/8x.jpg' %}" data-src="{% static 'assets/img/profiles/8.jpg' %}" src="{% static 'assets/img/profiles/8x.jpg' %}">
+                          <img alt="Profile Image" width="33" height="250" data-src-retina="{% static 'assets/img/profiles/8x.jpg' %}" data-src="{% static 'assets/img/profiles/9x.jpg' %}" src="{% static 'assets/img/profiles/8x.jpg' %}">
                         </div>
                           
                         <h5>강세윤 </h5>
